add GeoJson