@@ -2,12 +2,15 @@ package ru.meklaw.autodrome.controllers.rest;
 
 import org.modelmapper.ModelMapper;
 import org.springframework.beans.factory.annotation.Autowired;
+import org.springframework.format.annotation.DateTimeFormat;
 import org.springframework.web.bind.annotation.*;
 import ru.meklaw.autodrome.dto.GpsPointDTO;
 import ru.meklaw.autodrome.models.GpsPoint;
 import ru.meklaw.autodrome.service.GpsPointService;
 
-import java.util.List;
+import java.time.ZonedDateTime;
+import java.util.*;
+import java.util.stream.Collectors;
 
 @RestController
 @RequestMapping("/api/gps")
@@ -22,14 +25,24 @@ public class GpsPointRestController {
         this.gpsPointService = gpsPointService;
     }
 
-
     @GetMapping
-    public List<GpsPointDTO> index(@RequestParam(defaultValue = "-1") long vehicle_id) {
-        return gpsPointService.findAll(vehicle_id)
-                              .stream()
-                              .map(this::convertToGpsPointDTO)
-                              .toList();
+    public Object index(
+            @RequestParam(defaultValue = "-1") long vehicle_id,
+            @RequestParam @DateTimeFormat(iso = DateTimeFormat.ISO.DATE_TIME) Optional<ZonedDateTime> time_start,
+            @RequestParam @DateTimeFormat(iso = DateTimeFormat.ISO.DATE_TIME) Optional<ZonedDateTime> time_end,
+            @RequestParam(defaultValue = "false") boolean geoJSON) {
+        List<GpsPointDTO> gpsPoints = gpsPointService.findAll(vehicle_id, time_start, time_end)
+                                                     .stream()
+                                                     .map(this::convertToGpsPointDTO)
+                                                     .collect(Collectors.toList());
+
+        if (geoJSON) {
+            return convertToGeoJSON(gpsPoints);
+        } else {
+            return gpsPoints;
+        }
     }
+
 
     @GetMapping("/{id}")
     public GpsPointDTO findById(@PathVariable long id) {
@@ -44,5 +57,34 @@ public class GpsPointRestController {
     private GpsPointDTO convertToGpsPointDTO(GpsPoint point) {
         return modelMapper.map(point, GpsPointDTO.class);
     }
+
+    private Object convertToGeoJSON(List<GpsPointDTO> gpsPoints) {
+        List<Map<String, Object>> features = new ArrayList<>();
+
+        for (GpsPointDTO point : gpsPoints) {
+            Map<String, Object> feature = new HashMap<>();
+            Map<String, Object> geometry = new HashMap<>();
+            Map<String, Object> properties = new HashMap<>();
+
+            geometry.put("type", "Point");
+            geometry.put("coordinates", Arrays.asList(point.getX(), point.getY()));
+
+            properties.put("id", point.getId());
+            properties.put("dateTime", point.getDateTime());
+
+            feature.put("type", "Feature");
+            feature.put("geometry", geometry);
+            feature.put("properties", properties);
+
+            features.add(feature);
+        }
+
+        Map<String, Object> geoJSON = new HashMap<>();
+        geoJSON.put("type", "FeatureCollection");
+        geoJSON.put("features", features);
+
+        return geoJSON;
+    }
+
 }
 
